--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btn_lua"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lua"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
