--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+    <Button
+        android:id="@+id/btn_gif_widget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/btn_lua"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="gif_widget"
+        android:textAllCaps="false"
+        />
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
