--- a/app/src/main/res/layout/activity_gif_widget.xml
+++ b/app/src/main/res/layout/activity_gif_widget.xml
@@ -8,10 +8,18 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/iv_gif"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="98dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/rabbit_gif"
+        />
+
+    <ImageView
+        android:id="@+id/iv_normal_imageView"
+        android:layout_width="100dp"
+        android:layout_height="98dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
