--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,24 @@
         android:layout_height="wrap_content"
         android:text="lua"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btn_gif_widget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/btn_lua"
-        app:layout_constraintTop_toTopOf="parent"
         android:text="gif_widget"
         android:textAllCaps="false"
-        />
+        app:layout_constraintLeft_toRightOf="@id/btn_lua"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_constraints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_lua"
+        android:text="test_constraintLayout"/>
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
