--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,18 @@
         android:id="@+id/btn_constraints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="test_constraintLayout"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_lua"
-        android:text="test_constraintLayout"/>
+        app:layout_constraintTop_toBottomOf="@id/btn_lua" />
+
+    <Button
+        android:id="@+id/btnIme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="btn_ime"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_constraints" />
+
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
