--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,15 @@
         android:layout_height="wrap_content"
         android:text="btn_ime"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_constraints" />
+        app:layout_constraintTop_toBottomOf="@id/btn_web" />
+    <Button
+        android:id="@+id/btnShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="btnShare"
+        app:layout_constraintTop_toBottomOf="@id/btnIme"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <RelativeLayout
         android:id="@+id/rl_container"
