修改：分享相关测试代码

--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -6,4 +6,8 @@
     <files-path
         name="my_images"
         path="images/" />
+
+    <external-files-path
+        name="external_movies"
+        path="Movies/"/>
 </paths>
