--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,14 @@
         app:layout_constraintTop_toBottomOf="@id/btnIme"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <Button
+        android:id="@+id/btnRv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="btnRv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnShare" />
+
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
