--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnShare" />
 
+    <Button
+        android:id="@+id/btnGallery"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnRv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="画廊" />
+
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
