--- a/app/src/main/res/layout/activity_rv.xml
+++ b/app/src/main/res/layout/activity_rv.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".rv.RvActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.example.helloworld.rv.GalleyRecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
