--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnChat" />
 
+    <Button
+        android:id="@+id/btnTopApp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="顶部应用"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnChatServer" />
+
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
