--- a/app/src/main/res/layout/activity_get_top.xml
+++ b/app/src/main/res/layout/activity_get_top.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".screenshot.GetTopActivity">
 
+    <Switch
+        android:id="@+id/topSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="自动获取当前activity开关 "
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
