新增：4*2的配置页

--- a/app/src/main/res/xml/four_two_widget_info.xml
+++ b/app/src/main/res/xml/four_two_widget_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:configure="com.example.helloworld.widget.Widget4_2ConfigActivity"
     android:description="@string/app_four_two_widget_description"
     android:initialKeyguardLayout="@layout/four_two_widget"
     android:initialLayout="@layout/four_two_widget"
