--- a/app/src/main/res/layout/activity_widget_config_4_2.xml
+++ b/app/src/main/res/layout/activity_widget_config_4_2.xml
@@ -6,31 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".widget.WidgetConfigActivity">
 
-    <EditText
-        android:id="@+id/etContent"
+    <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="输入你想小组件展示的内容"
-        android:imeOptions="actionDone"
-        android:inputType="text"
+        android:text="4x2小组件配置"
+        android:textColor="@color/black"
+        android:textSize="14dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCancel"
+        android:id="@+id/btnWoodenFish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="cancel"
+        android:text="使用木鱼"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etContent" />
-
-    <Button
-        android:id="@+id/btnOk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OK"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etContent" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
