--- a/app/src/main/res/layout/four_two_widget.xml
+++ b/app/src/main/res/layout/four_two_widget.xml
@@ -5,6 +5,7 @@
     android:theme="@style/Theme.HelloWorld.AppWidgetContainer">
 
     <ImageView
+        android:id="@+id/ivBg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/default_widget_bg" />
