--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnChatServer" />
 
+    <Button
+        android:id="@+id/btnLaunchMode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="启动模式"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnTopApp" />
+
     <RelativeLayout
         android:id="@+id/rl_container"
         android:layout_width="100dp"
