新增：FLAG_ACTIVITY_EXCLUDE_FROM_RECENTS测试，使用该属性启动Activity时，如果被启动的Activity为栈底，那么退到后台时，该任务栈会隐藏，但实际上该任务栈是存活的。

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -37,4 +37,11 @@
         android:text="test allow task reparent with task2"
         android:layout_below="@id/testSingleInstance" />
 
+    <Button
+        android:id="@+id/testExcludeFromRecents"
+        android:layout_width="wrap_content"
+        android:layout_below="@id/testAllowTaskReparent"
+        android:layout_height="wrap_content"
+        android:text="test FLAG_ACTIVITY_EXCLUDE_FROM_RECENTS "
+        />
 </RelativeLayout>
