--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,5 +141,11 @@
 
     </RelativeLayout>
 
-
+    <Button
+        android:id="@+id/btnIPC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="IPC"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnLaunchMode" />
 </androidx.constraintlayout.widget.ConstraintLayout>
