--- a/app/src/main/res/layout/activity_test_ipcactivity.xml
+++ b/app/src/main/res/layout/activity_test_ipcactivity.xml
@@ -14,4 +14,13 @@
         android:textAllCaps="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/btnMessenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="messenger"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnBundle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
