--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,148 +4,176 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_lua"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="lua"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_gif_widget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="gif_widget"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toRightOf="@id/btn_lua"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_constraints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="test_constraintLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_lua" />
-
-    <Button
-        android:id="@+id/btn_web"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="btn_web"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_constraints" />
-    app:layout_constraintTop_toBottomOf="@id/btn_lua" />
-
-    <Button
-        android:id="@+id/btnIme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="btn_ime"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_web" />
-
-    <Button
-        android:id="@+id/btnShare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="btnShare"
-        android:textAllCaps="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnIme" />
-
-    <Button
-        android:id="@+id/btnLayoutInflater"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="btnLayoutInflater"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnShare" />
-
-    <Button
-        android:id="@+id/btnRv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="btnRv"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnShare" />
-
-    <Button
-        android:id="@+id/btnGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="画廊"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnRv" />
-
-    <Button
-        android:id="@+id/btnChat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="聊天"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnGallery" />
-
-    <Button
-        android:id="@+id/btnChatServer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="聊天服务器"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnChat" />
-
-    <Button
-        android:id="@+id/btnTopApp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="顶部应用"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnChatServer" />
-
-    <Button
-        android:id="@+id/btnLaunchMode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="启动模式"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnTopApp" />
-
-    <RelativeLayout
-        android:id="@+id/rl_container"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:background="#BBBBBB"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingRight="15dp"
-            android:text="哈哈哈哈哈哈哈哈哈哈哈哈或哈哈哈哈哈哈哈" />
+        <com.example.helloworld.base.BaseLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/view_tag"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_alignRight="@id/tv_name"
-            android:background="#BB0000" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-    </RelativeLayout>
+                <Button
+                    android:id="@+id/btn_lua"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="lua"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnIPC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="IPC"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnLaunchMode" />
+                <Button
+                    android:id="@+id/btn_gif_widget"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="gif_widget"
+                    android:textAllCaps="false"
+                    app:layout_constraintLeft_toRightOf="@id/btn_lua"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/btn_constraints"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="test_constraintLayout"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btn_lua" />
+
+                <Button
+                    android:id="@+id/btn_web"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="btn_web"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btn_constraints" />
+
+                <Button
+                    android:id="@+id/btnIme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="btn_ime"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btn_web" />
+
+                <Button
+                    android:id="@+id/btnShare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="btnShare"
+                    android:textAllCaps="false"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnIme" />
+
+                <Button
+                    android:id="@+id/btnLayoutInflater"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="btnLayoutInflater"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnShare" />
+
+                <Button
+                    android:id="@+id/btnRv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="btnRv"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnShare" />
+
+                <Button
+                    android:id="@+id/btnGallery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="画廊"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnRv" />
+
+                <Button
+                    android:id="@+id/btnChat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="聊天"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnGallery" />
+
+                <Button
+                    android:id="@+id/btnChatServer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="聊天服务器"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnChat" />
+
+                <Button
+                    android:id="@+id/btnTopApp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="顶部应用"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnChatServer" />
+
+                <Button
+                    android:id="@+id/btnLaunchMode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="启动模式"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnTopApp" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_container"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:background="#BBBBBB"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:paddingRight="15dp"
+                        android:text="哈哈哈哈哈哈哈哈哈哈哈哈或哈哈哈哈哈哈哈" />
+
+                    <View
+                        android:id="@+id/view_tag"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_alignRight="@id/tv_name"
+                        android:background="#BB0000" />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/windowInsets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="toggle bars"
+                    app:layout_constraintLeft_toRightOf="@id/btnIPC"
+                    app:layout_constraintTop_toTopOf="@id/btnIPC" />
+
+                <Button
+                    android:id="@+id/btnIPC"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="IPC"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnLaunchMode" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.example.helloworld.base.BaseLinearLayout>
+    </ScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
