--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,6 +171,15 @@
                     android:text="IPC"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/btnLaunchMode" />
+
+                <Button
+                    android:id="@+id/btnMedia"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Media3"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnIPC" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.example.helloworld.base.BaseLinearLayout>
     </ScrollView>
